welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: ';' expected but integer literal found.
    compteur 2 = compteur
             ^